# password-cli

./: .gitignore  README.md  passwords.db  pyproject.toml
