[tool.poetry]
name = "password-cli-app"
version = "0.1.0"
description = "Secure password generator CLI"
authors = ["Dragon Lord <iamanaiyelu@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pwdgen = "password_cli_app.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15"
sqlalchemy = "^2.0"
cryptography = "^44"
passlib = "^1.7.4"
rich = "^13.9.4"
tabulate = "^0.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
